--- a/index.html
+++ b/index.html
@@ -95,6 +95,6 @@
 
     <hr>
     <a href="hobbies.html">Hobbies</a>
-    <a href="Contact.html">Contact Me</a>
+    <a href="contact.html">Contact Me</a>
   </body>
 </html>
