--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<h1>Contact Me</h1>
+	<h1>Contact me</h1>
 	<ul>
 		<li>Email - kshitizshrivastava2013@gmail.com </li>
 		<li>Mobile Number- 8770261231</li>
